<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.569">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.569">

        <TextView
            android:id="@+id/tocken_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token_database"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tocken_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tocken_db"
            android:text="@string/view_the_database_of_tokens_generated"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tocken_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tocken_text"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="@android:color/holo_orange_dark"
            android:paddingTop="10dp"
            android:text="@string/tokens" />

    </RelativeLayout>



    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="381dp">

            <TextView
                android:id="@+id/movie_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_database"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_db"
                android:text="@string/view_and_add_to_the_database"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/movie_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_text"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/holo_blue_dark"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:text="@string/movies" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="381dp">

            <TextView
                android:id="@+id/user_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users_database"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_db"
                android:text="@string/view_the_database"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_text"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@android:color/holo_green_dark"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:textColor="@android:color/white"
                android:text="@string/users" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="285dp"
        android:layout_height="181dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mlogo" />


    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/floatingActionButton"-->
<!--        android:layout_width="61dp"-->
<!--        android:layout_height="57dp"-->
<!--        android:layout_marginBottom="28dp"-->
<!--        android:clickable="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.925"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@android:drawable/ic_input_add" />-->


</androidx.constraintlayout.widget.ConstraintLayout>